# rmagine_viewer

./: CMakeLists.txt  README.md
src/: rmagine_viewer.cpp
